Fixed previewer not wrapping text on url

--- a/src/styles/takenote_previewer.scss
+++ b/src/styles/takenote_previewer.scss
@@ -1,6 +1,7 @@
 @import './takenote_variables.scss';
 @import './_variables.scss';
 .tk_previewer {
+  word-break: break-all;
   position: relative;
   max-height: calc(100vh);
   overflow-y: auto;
